Fix slider images and arrow alignment

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2026,7 +2026,7 @@ header.main {
 }
 .slider-nav {
   position: absolute;
-  top: 50%;
+  top: calc(50% + 25px);
   transform: translateY(-50%);
   width: 50px;
   height: 50px;
